<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guitar Trainer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset_data">Reset data</string>
    <string name="menu_benchmark">Benchmark</string>

    <!-- Lesson selection and execution controls -->
    <string name="dialog_lessonselection_title">Dialog: Lesson Selection</string>
    <string name="lesson_select">Lessons</string>
    <string name="lesson_start">Start</string>
    <string name="lesson_next">Next</string>
    <string name="lesson_stop">Stop</string>
    <string name="instrument_select">Instruments</string>
    <string name="lesson_metrics">Metrics</string>
    <string name="undefined">--</string>

    <!-- For each lesson available: Titles and Descriptions -->
    <string name="lesson_scalegriddegree2position_title">ScalegridDegree2Position</string>
    <string name="lesson_scalegriddegree2position_description">The position must be found on fret for proposed ScaleGrid + Degree combination</string>
    <string name="lesson_position2note_title">Position2Note</string>
    <string name="lesson_position2note_description">The note must be submited for every position shown on the fret</string>
    <string name="lesson_note2position_title">Note2Position</string>
    <string name="lesson_note2position_description">The position must be submited for every note shown</string>
    <string name="lesson_scalegridchord2positions_title">ScalegridChord2Positions</string>
    <string name="lesson_scalegridchord2positions_description">The chord positions inside of scale grid must be submited for every chord type </string>
    <string name="lesson_modedegree2parent_title">Chord-2-Parent</string>
    <string name="lesson_modedegree2parent_description">For given chord, key and degree find the right parent key </string>
    <string name="lesson_parentdegree2mode_title">Parent-2-Chord</string>
    <string name="lesson_parentdegree2mode_description">For scale and degree, find the key of mode</string>

</resources>